# test_foods

./: main.py  pyproject.toml
app/: application.py  config.py
app/controllers/: foods.py
app/core/: context.py
app/models/: __init__.py  food.py  food_category.py  topping.py
app/models/base/: base.py  mixins.py
app/models/references/: topping_food_references.py
app/schemas/food/: base_food.py  create_food.py  get_foods.py  patch_food.py  update_food.py
app/services/: food_service.py
app/tests/: conftest.py
app/utils/: session.py
app/validation/: validate_food.py
config/: settings.yml
db/alembic/: env.py
db/alembic/versions/: 2024-08-07-10-48_add_extensions_109d2964d5fd.py  2024-08-07-10-48_init_default_tables_7a5c67807829.py
